logs/robotx.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/robotx'...
Listing './lib/python3.5/site-packages/robotx/conf'...
Listing './lib/python3.5/site-packages/robotx/core'...
Compiling './lib/python3.5/site-packages/robotx/core/__init__.py'...
***   File "./lib/python3.5/site-packages/robotx/core/__init__.py", line 52
    print "RobotX - Toolset for Automation Development with Robot Framework\n"
                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robotx/core/commands'...
Compiling './lib/python3.5/site-packages/robotx/core/commands/check.py'...
***   File "./lib/python3.5/site-packages/robotx/core/commands/check.py", line 50
    print " Syntax Checking ".center(70, '*')
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotx/core/commands/generate.py'...
***   File "./lib/python3.5/site-packages/robotx/core/commands/generate.py", line 62
    print '\n', ' Doc Generating ... '.center(70, '*')
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotx/core/commands/run.py'...
***   File "./lib/python3.5/site-packages/robotx/core/commands/run.py", line 99
    print "There's no case matching filter conditions"
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robotx/core/fabworker.py'...
***   File "./lib/python3.5/site-packages/robotx/core/fabworker.py", line 48
    print "\nStart to collect result files"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robotx/core/generator.py'...
***   File "./lib/python3.5/site-packages/robotx/core/generator.py", line 46
    print 'Error: Project names must begin with a capital letter. \
              \nand contain only letters, numbers and underscores.'
                                                                   
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robotx/core/listener.py'...
***   File "./lib/python3.5/site-packages/robotx/core/listener.py", line 59
    print '\n', '*' * 79
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robotx/core/nitrateclient.py'...
***   File "./lib/python3.5/site-packages/robotx/core/nitrateclient.py", line 38
    print 'Nitrate login ...'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robotx/core/paramshandler.py'...
***   File "./lib/python3.5/site-packages/robotx/core/paramshandler.py", line 94
    print 'The TCMS_PLAN_ID is required parameters!!'
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robotx/core/predistribute.py'...
***   File "./lib/python3.5/site-packages/robotx/core/predistribute.py", line 16
    print 'Start to launch workers ...'.center(50, '*')
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotx/core/resultvistor.py'...
***   File "./lib/python3.5/site-packages/robotx/core/resultvistor.py", line 41
    print '=' * 79
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robotx/lib'...
Compiling './lib/python3.5/site-packages/robotx/lib/DebugLibrary.py'...
***   File "./lib/python3.5/site-packages/robotx/lib/DebugLibrary.py", line 30
    print '\n\nEnter into Robot Framework debug shell:'
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/robotx/lib/XML-RPC.py'...
***   File "./lib/python3.5/site-packages/robotx/lib/XML-RPC.py", line 44
    except Exception, fault_info:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotx/lib/seleniumext'...
Listing './lib/python3.5/site-packages/robotx/lib/seleniumext/keywords'...
Listing './lib/python3.5/site-packages/robotx/template'...
Listing './lib/python3.5/site-packages/robotx/template/project_template'...
Listing './lib/python3.5/site-packages/robotx/template/project_template/cases'...
Listing './lib/python3.5/site-packages/robotx/template/project_template/cases/01__webui'...
Listing './lib/python3.5/site-packages/robotx/template/project_template/cases/02__cmd'...
Listing './lib/python3.5/site-packages/robotx/template/project_template/doc'...
Listing './lib/python3.5/site-packages/robotx/template/project_template/doc/resource_docs'...
Listing './lib/python3.5/site-packages/robotx/template/project_template/others'...
Listing './lib/python3.5/site-packages/robotx/template/project_template/resources'...
Compiling './lib/python3.5/site-packages/robotx/template/project_template/resources/CalculatorLibrary.py'...
***   File "./lib/python3.5/site-packages/robotx/template/project_template/resources/CalculatorLibrary.py", line 63
    except CalculationError, err:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robotx/template/project_template/results'...
Listing './lib/python3.5/site-packages/robotx/template/project_template/scripts'...
Listing './lib/python3.5/site-packages/robotx/utils'...
Compiling './lib/python3.5/site-packages/robotx/utils/copy.py'...
***   File "./lib/python3.5/site-packages/robotx/utils/copy.py", line 14
    except OSError as (errno, strerror):
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robotx/utils/misc.py'...
***   File "./lib/python3.5/site-packages/robotx/utils/misc.py", line 52
    print '-' * 80
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/robotx-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
